overflow fixed for text areas and more validations added to forms

--- a/react-app/src/components/ProfilePages/ProfileAbout.css
+++ b/react-app/src/components/ProfilePages/ProfileAbout.css
@@ -59,6 +59,10 @@
     gap: 1em;
     font-weight: 200;
     box-sizing: border-box;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
+    width: 100%;
 }
 
 .profile-picture-profile-page {
